syntax = "proto3";

option csharp_namespace = "SeasonBackend.Protos";

package Anime;

service SeasonProvider {
	rpc GetSeason (SeasonAnimeRequest) returns (SeasonAnimeResponse);
	rpc UpdateSeason (SeasonAnimeRequest) returns (SeasonAnimeResponse);
	rpc MineHoster (MineHosterRequest) returns (MineHosterResponse);
	rpc EditHoster (EditHosterRequest) returns (EditHosterResponse);
}

message SeasonAnimeRequest {
	string name = 1;
}

message SeasonAnimeResponse {
	repeated SeasonAnime Animes = 1;
}

message MineHosterRequest {
	int64 id = 1;
}

message MineHosterResponse {
	SeasonAnime Anime = 1;
}

message EditHosterRequest {
	int64 id = 1;
	repeated Hoster hosters = 2;
}

message EditHosterResponse {
	SeasonAnime Anime = 1;
}

message SeasonAnime {
	int64 id = 1;
	string malId = 2;
	string malName = 3;
	string malImageUrl = 4;
	uint32 malScore = 5;
	uint64 malMembers = 6;
	uint64 malEpisodesCount = 7;
	repeated Hoster hoster = 8;
	int64 hosterMinedAt = 9;
}

message Hoster {
	string id = 1;
	string name = 2;
	string url = 3;
	HosterType hosterType = 4;
}

enum HosterType {
	Unknown = 0;
	Amazon = 1;
	Netflix = 2;
	Crunchyroll = 3;
	Wakanim = 4;
	AnimeOnDemand = 5;
}
